# tarefa_progwebII_Python

./: README.md  pyproject.toml
src/aula08/: app.py  schemas.py
tests/: conftest.py  test_app.py
